--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+13 April 2020: mitmproxy 5.1.1
+    * Fixed Docker images not starting due to missing shell
+
 13 April 2020: mitmproxy 5.1
 
   ** Major Changes **
