add http trailers changelog entry

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -17,6 +17,7 @@ Unreleased: mitmproxy next
     * Rename SetHeaders addon to ModifyHeaders (@mplattner)
     * mitmweb: "New -> File" menu option has been renamed to "Clear All" (@yogeshojha)
     * Add new MapRemote addon to rewrite URLs of requests (@mplattner)
+    * Add support for HTTP Trailers to the HTTP/2 protocol (@sanlengjingvv and @Kriechi)
 
     * --- TODO: add new PRs above this line ---
 
