--- a/CHANGELOG
+++ b/CHANGELOG
@@ -20,6 +20,7 @@ Unreleased: mitmproxy next
     * Add support for HTTP Trailers to the HTTP/2 protocol (@sanlengjingvv and @Kriechi)
     * Fix certificate runtime error during expire cleanup (@gorogoroumaru)
     * Fixed the DNS Rebind Protection for secure support of IPv6 addresses (@tunnelpr0)
+    * WebSockets: match the HTTP-WebSocket flow for the ~websocket filter (@Kriechi)
 
     * --- TODO: add new PRs above this line ---
 
