--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,6 +2,8 @@ Unreleased: mitmproxy next
 
 ** Full Changelog **
 
+    * Add MsgPack content viewer (@tasn)
+
     * --- TODO: add new PRs above this line ---
 
     * ... and various other fixes, documentation improvements, dependency version bumps, etc.
