--- a/CHANGELOG
+++ b/CHANGELOG
@@ -3,6 +3,7 @@ Unreleased: mitmproxy next
 ** Full Changelog **
 
     * Add MsgPack content viewer (@tasn)
+    * Fix links to anticache docs in mitmweb and use HTTPS for links to documentation (@rugk)
 
     * --- TODO: add new PRs above this line ---
 
