--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,6 +4,7 @@ Unreleased: mitmproxy next
 
     * Add MsgPack content viewer (@tasn)
     * Fix links to anticache docs in mitmweb and use HTTPS for links to documentation (@rugk)
+    * Updated typing for WebsocketMessage.content (@prinzhorn)
 
     * --- TODO: add new PRs above this line ---
 
