--- a/CHANGELOG
+++ b/CHANGELOG
@@ -5,6 +5,7 @@ Unreleased: mitmproxy next
     * Add MsgPack content viewer (@tasn)
     * Fix links to anticache docs in mitmweb and use HTTPS for links to documentation (@rugk)
     * Updated typing for WebsocketMessage.content (@prinzhorn)
+    * Add option `console_strip_trailing_newlines`, and no longer strip trailing newlines by default (@capt8bit)
 
     * --- TODO: add new PRs above this line ---
 
