--- a/CHANGELOG
+++ b/CHANGELOG
@@ -13,6 +13,7 @@ Unreleased: mitmproxy next
 
 18 July 2020: mitmproxy 5.2
 
+    * Add Timestamp column + sorting functionality (@gorogoroumaru)
     * Add Filter message to mitmdump (@sarthak212)
     * Display TCP flows at flow list (@Jessonsotoventura, @nikitastupin, @mhils)
     * Colorize JSON Contentview (@sarthak212)
