--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,6 +9,7 @@ Unreleased: mitmproxy next
     * Prevent transparent mode from connecting to itself in the basic cases (@prinzhorn)
     * Display HTTP trailers in mitmweb (@sanlengjingvv)
     * Revamp onboarding app (@mhils)
+    * Add ASGI support for embedded apps (@mhils)
 
     * --- TODO: add new PRs above this line ---
 
