--- a/CHANGELOG
+++ b/CHANGELOG
@@ -6,6 +6,7 @@ Unreleased: mitmproxy next
     * Use `@charset` to decode CSS files if available (@prinzhorn)
     * Fix links to anticache docs in mitmweb and use HTTPS for links to documentation (@rugk)
     * Updated typing for WebsocketMessage.content (@prinzhorn)
+    * Display HTTP trailers in mitmweb (@sanlengjingvv)
 
     * --- TODO: add new PRs above this line ---
 
