--- a/CHANGELOG
+++ b/CHANGELOG
@@ -7,6 +7,7 @@ Unreleased: mitmproxy next
     * Fix links to anticache docs in mitmweb and use HTTPS for links to documentation (@rugk)
     * Updated typing for WebsocketMessage.content (@prinzhorn)
     * Prevent transparent mode from connecting to itself in the basic cases (@prinzhorn)
+    * Display HTTP trailers in mitmweb (@sanlengjingvv)
 
     * --- TODO: add new PRs above this line ---
 
