--- a/CHANGELOG
+++ b/CHANGELOG
@@ -12,6 +12,7 @@ Unreleased: mitmproxy next
     * Revamp onboarding app (@mhils)
     * Add ASGI support for embedded apps (@mhils)
     * Updated raw exports to not remove headers (@wchasekelley)
+    * Fix file unlinking before external viewer finishes loading (@wchasekelley)
 
     * --- TODO: add new PRs above this line ---
 
