--- a/CHANGELOG
+++ b/CHANGELOG
@@ -19,6 +19,7 @@ Unreleased: mitmproxy next
     * Support `deflateRaw` `Content-Encoding`s (@kjoconnor)
     * Fix broken requests without body on HTTP/2 (@Kriechi)
     * Add support for sending (but not parsing) HTTP Trailers to the HTTP/1.1 protocol (@bburky)
+    * Add support to echo http trailers in dumper addon (@shiv6146)
 
     * --- TODO: add new PRs above this line ---
 
